made tests run